apps/rollout/overlays/canary/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  replicas: 8
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: canary
  template:
    metadata:
      labels:
        app: canary
    spec:
      containers:
      - name: rollouts-demo
        image: argoproj/rollouts-demo:blue
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
  strategy:
    canary:
      # analysis:
      #   templates:
      #   - templateName: canary
      #   args:
      #   - name: namespace
      #     value: rollouts-demo-prod
      #   - name: route-name
      #     value: canary-canary
      #   - name: route-url
      #     value: canary-canary-rollouts-demo-prod.${SUB_DOMAIN}
      canaryService: canary-canary
      stableService: canary-stable
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}
      trafficRouting:
        istio:
          virtualServices:
            - name: canary
              routes:
              - primary
