apps/rollout/overlays/canary/canary-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: canary
spec:
  selector:
    app: canary
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
