apps/rollout/overlays/canary/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: canary
spec:
  port:
    targetPort: http2
  to:
    kind: Service
    name:  canary
    weight: 100
  wildcardPolicy: None
